be able to build project under Java 11 and Java 17 JDKs