@@ -802,7 +802,7 @@ public class SwiftMessage implements Serializable, JsonSerializable {
     public Integer fragmentCount() {
         // if this is not a fragment => 0
         if (!this.isFragment().booleanValue()) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
 
         // get the block 4 and tag 203 (they BOTH exists here)
@@ -811,7 +811,7 @@ public class SwiftMessage implements Serializable, JsonSerializable {
         // process the number
         Integer _t203;
         try {
-            _t203 = new Integer(Integer.parseInt(t203, 10));
+            _t203 = Integer.valueOf(Integer.parseInt(t203, 10));
         } catch (final NumberFormatException nfe) {
             throw new UnsupportedOperationException(MESSAGE_IS_NOT_A_FRAGMENT);
         }
@@ -838,7 +838,7 @@ public class SwiftMessage implements Serializable, JsonSerializable {
         // process the number
         Integer _t202;
         try {
-            _t202 = new Integer(Integer.parseInt(t202, 10));
+            _t202 = Integer.valueOf(Integer.parseInt(t202, 10));
         } catch (final NumberFormatException nfe) {
             throw new UnsupportedOperationException(MESSAGE_IS_NOT_A_FRAGMENT);
         }
@@ -946,7 +946,7 @@ public class SwiftMessage implements Serializable, JsonSerializable {
     public Integer getUnparsedTextsSize() {
         // no list => size is zero...
         if (this.unparsedTexts == null) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
         return this.unparsedTexts.size();
     }
